# harness-racing

./: CHATGPT_HANDOFF.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  README.md  pyproject.toml  streamlit_app.py  weights.json
.claude/: settings.local.json
Claude Files/: CLAUDE.md  build_track_pars.py  fetch_drivers.py  fetch_horses.py  fetch_race_v2.py  score_horses.py
docs/: AP070426.html  BH080426.html  CB130426.html  DU100426.html  EY040426.html  LM300326.html  NA050426.html  NA120426.html  NR020426.html  NR060426.html  NR100426.html  PC070426.html  PC110426.html  PC310326.html  PE020426.html  PE090426.html  PK040426.html  TM060426.html  YU100426.html  index.html  meetings.json
src/harness_model/: __init__.py  cli.py  compare.py  entities.py  features.py  models.py  odds.py  parsers.py  pipeline.py  scraper.py  storage.py  track_pars.py  web.py
src/harness_model/backtest/: __init__.py  evaluate.py
src/harness_model/feature_blocks/: __init__.py  builder.py  class_rating.py  driver_trainer.py  fitness.py  map.py  margins.py  sectionals.py
src/harness_model/scoring/: __init__.py  score_model.py
src/harness_odds_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
