[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-odds-model"
version = "0.1.0"
description = "Structured data pipeline for a harness racing odds model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.44",
]

[project.scripts]
harness-model = "harness_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
